[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cv2_enumerate_cameras"
version = "1.1"
authors = [
  { name="Yu He", email="chinaheyu@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/chinaheyu/cv2_enumerate_cameras"
Issues = "https://github.com/chinaheyu/cv2_enumerate_cameras/issues"