[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cv2_enumerate_cameras"
description = "Enumerate / List / Find / Detect / Search index for opencv VideoCapture."
authors = [
  { name="Yu He", email="chinaheyu@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["opencv", "cv2", "enumerate", "camera", "video capture"]
dynamic = ["version"]

[project.optional-dependencies]
linuxpy = [
  "linuxpy ; platform_system == 'Linux'"
]

[project.urls]
Homepage = "https://github.com/chinaheyu/cv2_enumerate_cameras"
Issues = "https://github.com/chinaheyu/cv2_enumerate_cameras/issues"

[project.scripts]
cv2_enumerate_cameras = "cv2_enumerate_cameras.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cv2_enumerate_cameras"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "cv2_enumerate_cameras.__version__"}
